tripController and swagger update
